; ModuleID = '/home/carl/AnghaBench/streem/src/extr_time.c_get_tm.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_time.c_get_tm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, %struct.tm*)* @get_tm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_tm(i32 %0, i32 %1, %struct.tm* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.tm*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.tm* %2, %struct.tm** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 %8, %7
  store i32 %9, i32* %4, align 4
  %10 = load %struct.tm*, %struct.tm** %6, align 8
  %11 = call i32 @gmtime_r(i32* %4, %struct.tm* %10)
  ret void
}

declare dso_local i32 @gmtime_r(i32*, %struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
